--- a/CompressFile/CompressFile.vcxproj.filters
+++ b/CompressFile/CompressFile.vcxproj.filters
@@ -18,5 +18,25 @@
     <ClCompile Include="CompressFile.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="DataStructuresLZW.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CommonFunction.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="LZW_Compress.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="DataStructuresLZW.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CommonFunction.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LZW_Compress.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
